# arcadedb-embedded-python

./: .gitattributes  .gitignore  CITATION.cff  README.md  make-upstream-pr-branch.sh  plan_update_python_bindings.md  pom.xml  pyproject.toml  sync-upstream.sh  things-to-do.md
bindings/python/: .gitignore  BUILD.md  CI_SETUP.md  Dockerfile.build  IMPLEMENTATION_PLAN.md  IMPROVEMENTS.md  PYTHON_BINDINGS_AUDIT.md  PYTHON_BINDINGS_REFACTOR_PLAN.md  README.md  TODO.md  build-all.sh  build-native.sh  build.sh  build_and_install_locally.sh  extract_version.py  fix_markdown.py  jar_exclusions.txt  list_image_jars_by_size.sh  mkdocs.yml  pyproject.toml  setup_jars.py
bindings/python/benchmarks/jpype_overhead/: .gitignore  ColumnProbe.java  HangRepro.java  OverheadBench.java  REPORT.md  RowBatcher.java  bench_memory.py  bench_python.py  bench_round5.py  bench_scale.py  bench_soak.py  gen_dataset.py  probe_columnar.py  probe_round2.py  probe_round3.py  run_bench.sh  validate_attribution.py
bindings/python/docs/: api-access-methods.md  index.md  java-api-coverage.md  troubleshooting.md
bindings/python/docs/api/: async_executor.md  batch.md  citation.md  database.md  exceptions.md  exporter.md  graph_batch.md  importer.md  jvm.md  record-wrappers.md  results.md  schema.md  server.md  transactions.md  type_conversion.md  vector.md
bindings/python/docs/development/: architecture.md  bridge.md  build-architecture.md  ci-setup.md  contributing.md  documentation.md  release.md  sync-upstream.md  testing.md  troubleshooting.md
bindings/python/docs/examples/: 01_simple_document_store.md  02_social_network_graph.md  03_vector_search.md  04_csv_import_documents.md  05_csv_import_graph.md  06_vector_search_recommendations.md  07_stackoverflow_multimodel.md  07_stackoverflow_tables_oltp.md  08_server_mode_rest_api.md  08_stackoverflow_tables_olap.md  09_stackoverflow_graph_oltp.md  10_stackoverflow_graph_olap.md  11_vector_index_build.md  12_vector_search.md  13_stackoverflow_hybrid_queries.md  14_lifecycle_timing.md  15_import_database_vs_transactional_table_ingest.md  16_import_database_vs_transactional_graph_ingest.md  17_timeseries_end_to_end.md  18_geo_predicates_wkt.md  19_hash_index_exact_match.md  20_graph_algorithms_route_planning.md  21_graph_analytical_view_sql.md  21_server_mode_http_access.md  basic.md  download_data.md  import.md  index.md  vectors.md
bindings/python/docs/getting-started/: distributions.md  installation.md  quickstart.md
bindings/python/docs/guide/: Query_vs_API_Guide.md  graphs.md  import.md  operations.md  performance.md  server.md  vectors.md
bindings/python/examples/: .gitignore  01_simple_document_store.py  02_social_network_graph.py  03_vector_search.py  04_csv_import_documents.py  05_csv_import_graph.py  06_vector_search_recommendations.py  07_server_mode_rest_api.py  07_stackoverflow_multimodel-try1.py  07_stackoverflow_multimodel-try2.py  07_stackoverflow_multimodel.py  07_stackoverflow_tables_oltp.py  08_server_mode_rest_api.py  08_stackoverflow_tables_olap.py  09_stackoverflow_graph_oltp.py  10_stackoverflow_graph_olap.py  11_vector_index_build.py  12_vector_search.py  13_stackoverflow_hybrid_queries.py  14_lifecycle_timing.py  15_import_database_vs_transactional_table_ingest.py  16_import_database_vs_transactional_graph_ingest.py  20_graph_algorithms_route_planning.py  21_server_mode_http_access.py  22_graph_analytical_view_sql.py  EXAMPLES_PLAN.md  README.md  benchmark_results_glove-100-angular-.md  benchmark_results_glove-100-angular.md  benchmark_results_sift-128-euclidean-.md  benchmark_results_sift-128-euclidean.md  benchmark_vector_params.py  brainstorming.ipynb  download_data.py  foo  measure-time.md  run_benchmark_04_csv_import_documents.sh  run_benchmark_05_csv_import_graph.sh  run_with_memory_monitor.sh  sql_benchmark_gremlin_vs_opencypher.py  (+3 more)
bindings/python/prototype/: .gitignore  Dockerfile.jre-prototype  README.md  RESULTS.md  build-jre-prototype.sh  test-jre-wheel.sh  test_installed_wheel.py
bindings/python/scripts/: Dockerfile.build  build-native.sh  build_and_install_locally.sh  end_to_end_binding_overhead_benchmark.py  fix_markdown.py  jar_exclusions.txt  list_image_jars_by_size.sh
bindings/python/tests/: README.md  README_PYTEST_ISSUE.md  conftest.py  test_async_executor.py  test_batch_context.py  test_concurrency.py  test_core.py  test_cypher.py  test_database_utils.py  test_docs_examples.py  test_exporter.py  test_graph.py  test_graph_algorithms_sql.py  test_graph_api.py  test_gremlin.py  test_import_database.py  test_importer.py  test_importer_api.py  test_jvm_args.py  test_legacy_vector.py  test_numpy_support.py  test_resultset.py  test_schema.py  test_server.py  test_server_patterns.py  test_timeseries_sql.py  test_transaction_config.py  test_type_conversion.py  test_vector.py  test_vector_params_verification.py  test_vector_sql.py
(+499 files in other folders)
